--- a/index.html
+++ b/index.html
@@ -301,11 +301,13 @@
           <h4><strong> Astrobee platform</strong></h4>
           <hr class="short">
             <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
-            <img src="/image/astrobee_platform.png" width="400" height="200">
-            <ul>
-            <li>NavCam provides monocular image sequences at 15 Hz.</li>
-            <li>IMU are logged at 250Hz and expressed in IMU body cam.</li>
-            </ul>
+            <div class="window">
+              <img src="/image/astrobee_platform.png" width="400" height="200">
+              <ul>
+              <li>NavCam provides monocular image sequences at 15 Hz.</li>
+              <li>IMU are logged at 250Hz and expressed in IMU body cam.</li>
+              </ul>
+            </div>
         </p>
       </div>
       <br />
