--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
     <div class="container" style="margin-top: -40px">
       <br />
       <div class="section">
-        <h3 align="center">Abstract</h3>
-        <hr />
         <p>
           We release new visual navigation datasets acquired in challenging interior environments of ISS, which have not been covered by existing datasets.
           The datasets are captured by the Astrobee free-flying robots onboard the ISS since 2019 during intra-vehicular activities, including interior environmental surveys (e.g., systems inspection, monitoring, and sound level
@@ -315,7 +313,7 @@
       <div class="section">
         <h3 align="center">BibTex</h3>
         <hr />
-        <div class="bibtexsection">
+        <div style="padding-left: 15px" class="bibtexsection">
           @InProceedings{ ????,
 				title     = {Astrobee Datasets for Intra-Vehicular Activity Robots on the ISS},
                 author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin, Andres Mora Vargas, Marina Moreira, Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides},
