--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     <div class="container" style="margin-top: -40px">
       <div class="section">
         <p>
-          We release new visual navigation datasets acquired in challenging interior environments of ISS, which have not been covered by existing datasets.
+          Several recent studies have focused on developing free-flying robots (NASA Astrobee and JAXA Int-Ball, etc.) that perform a variety of intra-vehicular activities and tasks in microgravity on the international space station(ISS).
+          While accurate and robust in-spacecraft navigation is critical for the missions of intra-vehicular robots, a dataset for visual navigation in a spacecraft has not yet existed. When considering challenges for in-cabin visual navigation,
+          intra-vehicular environments differ from indoor and outdoor scenes on Earth due to the nature of spacecraft:absence of a gravity vector, occlusions from unorganized cargo bags,etc.
+          To address these issues  We release new visual navigation datasets acquired in challenging interior environments of ISS, which have not been covered by existing datasets.
           The datasets are captured by the Astrobee free-flying robots onboard the ISS since 2019 during intra-vehicular activities, including interior environmental surveys (e.g., systems inspection, monitoring, and sound level
           measurements). We also benchmark six state-of-the-art visual odometry (VO) and SLAM algorithms on the proposed Astrobee datasets and you can see in our paper.
         </p>
@@ -323,27 +326,19 @@
         <p></p>
       </div>
 
-      <div class="container" style="margin-top: -40px">
       <br />
       <div class="section">
         <h3 align="center">Contact</h3>
         <hr />
         <p>
           You can send feedback and questions to: <br>
-            <ul>
-            <li> Pyojin Kim : pjinkim1215@gmail.com </li>
-            <li> Suyoung Kang : suyoungkang1222@gmail.com </li>
-            <li> Daekyeong Lee : swbubl@gmail.com </li>
-            </ul>
+          <ul>
+          <li> Pyojin Kim : pjinkim1215@gmail.com </li>
+          <li> Suyoung Kang : suyoungkang1222@gmail.com </li>
+          <li> Daekyeong Lee : swbubl@gmail.com </li>
+          </ul>
         </p>
       </div>
-        <footer>
-        <hr />
-        <p>
-           Sookmyung Women's University, MPIL(Machine Perception and Intelligence Lab) <br>
-        </p>
-        </footer>
-
     </div>
   </body>
 </html>
