--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <hr />
         <p>
           &nbsp;Our datasets consist of various intra-vehicular activities of Astrobee free-flying robots currently operating on the ISS between May 13, 2019 and July 14, 2022.<br>
-          The datasets are collected inside the largest single ISS module, the Japanese experiment module (JEM) nicknamed Kibo, and contain ground-truth 6-DoF camera poses and detailed 3D CAD models of the environment. <bt>
+          &nbsp;The datasets are collected inside the largest single ISS module, the Japanese experiment module (JEM) nicknamed Kibo, and contain ground-truth 6-DoF camera poses and detailed 3D CAD models of the environment. <bt>
           <div style="text-align : center;">
             <img src='/image/example_ISS.png' width="970">
           </div>
@@ -302,7 +302,7 @@
             <br />
           <h4><strong> Astrobee platform</strong></h4>
           <hr class="short">
-            <p>The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
+            <p>&nbsp;The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <div class="window">
               <img src="/image/astrobee_platform.png" width="400" height="200">
               <ul>
