--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
             <li>Timestamp are in integer nanoseconds UNIX.</li>
             </ul><br>  </p>
 
-          <h4><strong> Ground-truth trajectories and IMU</strong></h4>
+          <h4><strong> Ground-Truth Trajectories and IMU</strong></h4>
           <hr class="short">
-            <p>&nbsp;We provide the Ground-truth trajectories in text file containing 6-DoF camera poses for all images. We also provide the angular rates and acceleration measurements from IMU.<br><br>
+            <p>&nbsp;We provide the Ground-truth trajectories in text file containing 6-DoF camera poses for all images. We also provide the angular rates and acceleration measurements from IMU.<br>
             <ul>
             <li>The ground-truth trajectories are stored in "groundtruth.txt".</li>
             <li>Each line in the groundtruth text file contains a single pose of nav_cam as <strong>[timestamp tx ty tz qx qy qz qw]</strong> format.</li>
@@ -300,11 +300,11 @@
             </ul>
           </p>
             <br />
-          <h4><strong> Astrobee platform</strong></h4>
+          <h4><strong> Astrobee Platform</strong></h4>
           <hr class="short">
             <p>&nbsp;The Astrobee free-flying IVA robots used for dataset collection. This is the positions of the sensors and the rigid body transformations that link them.<br>
             <div class="window">
-              <img src="/image/astrobee_platform.png" width="400" height="200">
+              <img src="/image/astrobee_platform.png" width="400">
               <ul>
               <li>NavCam provides monocular image sequences at 15 Hz.</li>
               <li>IMU are logged at 250Hz and expressed in IMU body cam.</li>
