--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <!-- 저자 부분  -->
       <p class="authors">
         Suyoung Kang<sup>1</sup>,
+        Ryan Soussan<sup>2,3</sup>
+        Pyojin Kim<sup>1</sup>
         Daekyeong Lee<sup>1</sup>,
-        Ryan Soussan<sup>2,3</sup>,
-        Pyojin Kim<sup>1</sup>,
         Brian Coltin<sup>2,3</sup>,
         Andres Mora Vargas<sup>2,3</sup>,
         Marina Moreira<sup>2,3</sup>,<br>
@@ -27,7 +27,8 @@
         Maria Bualat<sup>2</sup>,
         Trey Smith<sup>2</sup>,<br>
         Jonathan Barlow<sup>2,3</sup>,
-        Jose Benavides<sup>2</sup>
+        Jose Benavides<sup>2</sup>,
+        Eunju Jeong<sup>1</sup>
       </p>
       <!-- button 부분  -->
       <div class="btn-group" role="group" aria-label="Top menu">
