--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <!-- 저자 부분  -->
       <p class="authors">
         Suyoung Kang<sup>1</sup>,
-        Ryan Soussan<sup>2,3</sup>
-        Pyojin Kim<sup>1</sup>
+        Ryan Soussan<sup>2,3</sup>,
+        Pyojin Kim<sup>1</sup>,
         Daekyeong Lee<sup>1</sup>,
         Brian Coltin<sup>2,3</sup>,
         Andres Mora Vargas<sup>2,3</sup>,
