--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <div style="padding-left: 15px" class="bibtexsection">
           @InProceedings{ ????,
 				title     = {Astrobee Datasets for Intra-Vehicular Activity Robots on the ISS},
-                author    = {Suyoung Kang, Daekyeong Lee, Ryan Soussan, Pyojin Kim, Brian Coltin, Andres Mora Vargas, Marina Moreira, Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides},
+                author    = {Suyoung Kang, Ryan Soussan, Pyojin Kim, Daekyeong Lee, Brian Coltin, Andres Mora Vargas, Marina Moreira, Kathryn Hamilton, Ruben Garcia, Maria Bualat, Trey Smith, Jonathan Barlow, Jose Benavides, Eunju Jeong},
 				booktitle = {?????},
 				year      = {2023}
 			}
@@ -338,7 +338,6 @@
           <ul>
           <li> Pyojin Kim : pjinkim1215@gmail.com </li>
           <li> Suyoung Kang : suyoungkang1222@gmail.com </li>
-          <li> Daekyeong Lee : swbubl@gmail.com </li>
           </ul><br>
         </p>
       </div>
