--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         Pyojin Kim<sup>1</sup>,
         Daekyeong Lee<sup>1</sup>,
         Brian Coltin<sup>2,3</sup>,
-        Andres Mora Vargas<sup>2,3</sup>,
-        Marina Moreira<sup>2,3</sup>,<br>
+        Andres Mora Vargas<sup>2,3</sup>,<br>
+        Marina Moreira<sup>2,3</sup>,
         Kathryn Hamilton<sup>2</sup>,
         Ruben Garcia<sup>2,3</sup>,
         Maria Bualat<sup>2</sup>,
